[package]
name = "faqbot-cc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.12.0"
fuzzy-matcher = "0.3.7"
humantime = "2.3.0"
include_dir = "0.7.4"
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serenity = { version = "0.12.5", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
